--- a/css/style.css
+++ b/css/style.css
@@ -204,4 +204,41 @@ body{
     }
 
 
+    .Alt_right{
+        background-color: aliceblue;
+   width: 55px;
+   height: 55px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+  
+   border:1px solid grey;
+    }
+    .Alt_left{
+        background-color: aliceblue;
+   width: 55px;
+   height: 55px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+  
+   border:1px solid grey;
+    }
+
+    .Alt_right:hover{
+        background-color: blue;
+        color: white;
+        border-radius: 0px;
+        cursor: pointer;
+       
+    }
+
+    .Alt_left:hover{
+        background-color: blue;
+        color: white;
+        border-radius: 0px;
+        cursor: pointer;
+       
+    }
+
 
